# smol-party

./: .flake8  .gitignore  Makefile  README.md  TODO.md  app.yaml  ironfist.py  main.py  manage.py  pyproject.toml  requirements.txt  run_linters.py
.github/workflows/: check-python.yaml  deploy.yml
events/: admin.py  converters.py  models.py  secret_utils.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_auto_20211010_2316.py  0002_auto_20211113_0002.py  0002_auto_20220416_2208.py  0003_auto_20211011_0207.py  0004_auto_20211011_0354.py  0005_auto_20211011_0511.py
events/static/events/: app.js  style.css
events/templates/events/: detail.html  event_form.html  footer.html  form_field.html  header.html  index.html  rsvp_detail.html  rsvp_form.html
events/templates/events/event/: create_update.html  delete.html  detail.html
events/templates/events/rsvp/: create_update.html  delete.html
planner/: asgi.py  settings.py  urls.py  views.py  wsgi.py
planner/templates/planner/: index.html
