[tool.poetry]
authors = ["Devon Peticolas <devon@peticol.as>"]
description = "A lightweight alternative to a facebook event."
name = "event-planner"
version = "0.0.1"

[tool.poetry.dependencies]
python = "3.10.3"
Django = "^3.2"
django-environ = "^0.7"
google-cloud-secret-manager = "^2.7"
psycopg2-binary = "^2.9"
arrow = "^1.2"
django-widget-tweaks = "^1.4.12"
base58 = "^2.1.1"

[tool.poetry.dev-dependencies]
black = { version = "20.8b1", allow-prereleases = true }
isort = "^5"
flake8 = "^4"
mypy = "^0.942"

# Pinning to fix a temporary issue with black: https://github.com/psf/black/issues/2964
click = "<=8.0.4"

[tool.black]
line-length = 100

[tool.isort]
ensure_newline_before_comments = "True"
force_grid_wrap = 0
include_trailing_comma = "True"
line_length = 100
multi_line_output = 3
use_parentheses = "True"

[tool.mypy]
ignore_missing_imports = true
exclude = ["settings.py", "events/migrations/"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
